--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 .App {
   text-align: center;
 }
@@ -35,4 +40,54 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.center{
+  width: 100%;
+  height: 100vh;
+  background-image: url('https://img.freepik.com/free-photo/plain-smooth-green-wall-texture_53876-129746.jpg?size=626&ext=jpg&ga=GA1.1.1546980028.1703721600&semt=ais');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid black;
+}
+.light{
+  font-size: 3rem;
+  color: white;
+}
+.margen{
+  margin: 10px;
+  margin-left: 3rem;
+  padding: 5px;
+}
+.btn{
+  margin-left: 10px;
+  padding: 2px;
+}
+.btn {
+  padding: 2px;
+  font-size: 24px;
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+  color: #fff;
+  background-color: #04AA6D;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+}
+.btn:hover {background-color: #3e8e41
+}
+
+.btn:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+.white{
+  font-size: 17px;
+  color: white;
 }
